# my-first-project

./: CMakeLists.txt  README.md
inc/: app_state.hpp  config.h  config.h.in  logs.hpp  main.hpp
inc/panel/: fspanel.hpp  panel.hpp  settings_panel.hpp  vispanel.hpp
inc/panel/tree/: tree.hpp
inc/render_tls/: render.hpp  render_tls_panel.hpp
inc/sigs/: event_handler.hpp  handler.hpp  sigs.hpp
src/: inits.cpp  logs.cpp  main.cpp
src/panel/: fspanel.cpp  panel.cpp  vispanel.cpp
src/panel/tree/: tree.cpp
src/render_tls/: render.cpp  render_panels.cpp  render_tls_fspanel.cpp  render_tls_vispanel.cpp
src/sigs/: event_handler.cpp  proc_sig.cpp
